[gd_scene load_steps=6 format=2]

[ext_resource path="res://gfx/clouds/finishMeenubacground.png" type="Texture" id=1]
[ext_resource path="res://theme/Attemt_Theme.tres" type="Theme" id=2]
[ext_resource path="res://Objects/Menu/FinishMenuLvl1.gd" type="Script" id=3]
[ext_resource path="res://theme/Win_Theme.tres" type="Theme" id=4]
[ext_resource path="res://theme/Buttons_Font.tres" type="Theme" id=5]

[node name="FinishMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 0.998047
anchor_bottom = 0.993333
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Panel" type="Panel" parent="."]
margin_left = 221.0
margin_top = 90.0
margin_right = 841.0
margin_bottom = 264.0
theme = ExtResource( 4 )

[node name="Won" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -204.0
margin_top = -68.0
margin_right = 203.0
margin_bottom = -27.0
text = "!!! YOU WON !!!"

[node name="Attempt" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -275.0
margin_top = -4.0
margin_right = 11.0
margin_bottom = 20.0
theme = ExtResource( 2 )
text = "YOUR ATTEMPTS OF THE CURRENT GAME: 0"

[node name="Time" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -275.0
margin_top = 20.0
margin_right = -26.0
margin_bottom = 44.0
theme = ExtResource( 2 )
text = "YOUR TIME OF THE CURRENT GAME: 0"

[node name="AllAttempt" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 117.0
margin_top = -4.0
margin_right = 272.0
margin_bottom = 20.0
theme = ExtResource( 2 )
text = "YOUR ALL ATTEMPTS: 0"

[node name="AllTime" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 118.0
margin_top = 20.0
margin_right = 238.0
margin_bottom = 44.0
theme = ExtResource( 2 )
text = "YOUR ALL TIME: 0"

[node name="Coins" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.0
margin_top = 57.0
margin_right = 62.0
margin_bottom = 81.0
theme = ExtResource( 2 )
text = "YOUR COINS: O"

[node name="Textures" type="Control" parent="."]
margin_top = 8.0
margin_right = 40.0
margin_bottom = 48.0

[node name="ShadowRestartMenuButton" type="ColorRect" parent="Textures"]
margin_left = 72.0
margin_top = 404.0
margin_right = 278.0
margin_bottom = 500.0
color = Color( 0.431373, 1, 0.317647, 1 )

[node name="ColorRestartButton" type="ColorRect" parent="Textures"]
margin_left = 75.0
margin_top = 407.0
margin_right = 275.0
margin_bottom = 497.0
color = Color( 0.0117647, 0.0235294, 0.376471, 1 )

[node name="ShadowMainMenuButton" type="ColorRect" parent="Textures"]
margin_left = 424.0
margin_top = 404.0
margin_right = 630.0
margin_bottom = 500.0
color = Color( 0.431373, 1, 0.317647, 1 )

[node name="ColorMainMenuButton" type="ColorRect" parent="Textures"]
margin_left = 427.0
margin_top = 407.0
margin_right = 627.0
margin_bottom = 497.0
color = Color( 0.0117647, 0.0235294, 0.376471, 1 )

[node name="ShadowNextLevelButton" type="ColorRect" parent="Textures"]
margin_left = 754.0
margin_top = 405.0
margin_right = 960.0
margin_bottom = 501.0
color = Color( 0.431373, 1, 0.317647, 1 )

[node name="ColorNextLevelButton" type="ColorRect" parent="Textures"]
margin_left = 757.0
margin_top = 408.0
margin_right = 957.0
margin_bottom = 498.0
color = Color( 0.0117647, 0.0235294, 0.376471, 1 )

[node name="ShadowExitButton" type="ColorRect" parent="Textures"]
margin_left = 874.0
margin_top = 545.0
margin_right = 1015.0
margin_bottom = 572.0
color = Color( 0, 0, 0, 1 )

[node name="ColorExitlButton" type="ColorRect" parent="Textures"]
margin_left = 876.0
margin_top = 547.0
margin_right = 1013.0
margin_bottom = 570.0
color = Color( 0.592157, 0.0392157, 0.0392157, 1 )

[node name="Buttons" type="Control" parent="."]
margin_left = -100.0
margin_top = 405.0
margin_right = 1134.0
margin_bottom = 598.0
theme = ExtResource( 5 )

[node name="ButtonRestartMenu" type="Button" parent="Buttons"]
margin_left = 175.0
margin_top = 9.0
margin_right = 375.0
margin_bottom = 99.0
text = "Restart Level"
flat = true

[node name="ButtonMainMenu" type="Button" parent="Buttons"]
margin_left = 527.0
margin_top = 9.0
margin_right = 727.0
margin_bottom = 99.0
text = "Main Menu"
flat = true

[node name="ButtonNextLevel" type="Button" parent="Buttons"]
margin_left = 857.0
margin_top = 10.0
margin_right = 1057.0
margin_bottom = 100.0
text = "Next Level"
flat = true

[node name="Exit" type="Button" parent="Buttons"]
margin_left = 971.0
margin_top = 145.0
margin_right = 1118.0
margin_bottom = 181.0
text = "Quite the game"
flat = true

[connection signal="pressed" from="Buttons/ButtonRestartMenu" to="." method="_on_ButtonRestartMenu_pressed"]
[connection signal="pressed" from="Buttons/ButtonMainMenu" to="." method="_on_ButtonMainMenu_pressed"]
[connection signal="pressed" from="Buttons/ButtonNextLevel" to="." method="_on_ButtonNextLevel_pressed"]
[connection signal="pressed" from="Buttons/Exit" to="." method="_on_Exit_pressed"]
